--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,12 @@
   "version": "1.0",
   "description": "A Chrome extension that injects a fixed WhatsApp-style header bar at the top of WhatsApp Web.",
   "permissions": ["tabs", "activeTab", "scripting"],
+  "web_accessible_resources": [
+    {
+      "resources": ["icons/*"],
+      "matches": ["https://web.whatsapp.com/*"]
+    }
+  ],
   "content_scripts": [
     {
       "matches": ["https://web.whatsapp.com/*"],
@@ -11,4 +17,4 @@
       "css": ["content.css"]
     }
   ]
-} 
+}
