Update: Added Dashboard functonality + Settings

--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,15 @@
   "name": "WA Header Bar",
   "version": "1.0",
   "description": "A Chrome extension that injects a fixed WhatsApp-style header bar at the top of WhatsApp Web.",
-  "permissions": ["tabs", "activeTab", "scripting"],
+  "permissions": ["tabs", "activeTab", "scripting", "management"],
   "host_permissions": [
     "https://web.whatsapp.com/*"
   ],
   "web_accessible_resources": [
     {
-      "resources": ["icons/*"],
+      "resources": [
+        "icons/*"
+      ],
       "matches": ["https://web.whatsapp.com/*"]
     }
   ],
